Correction Overflow/Position Circle

--- a/Clase_HTML/style.css
+++ b/Clase_HTML/style.css
@@ -105,8 +105,6 @@ img {
     padding: 64px calc((100% - 1200px)/2) 64px calc((100% - 1200px)/2);
     text-align: center;
     background-color: white;
-    position: relative;
-    overflow: hidden;
 }
 
     .section__title {
@@ -147,7 +145,6 @@ img {
     height: 234px;
     width: 234px;
     inset: 450px auto auto calc(50% - 234px / 2);
-    z-index: -1;
 }
 
 /* Services */
@@ -440,4 +437,8 @@ footer {
 
 .spacing90px {
     padding: 90px 0;
+}
+
+.overflowhidden {
+    overflow: hidden;
 }
